[metadata]
name = esi
summary = esi documentation
description-file = README.md
author = Red Hat, Inc.
author_email = tzumainn@redhat.com
home_page = https://github.com/cci-moc/esi
classifier = 
 License :: OSI Approved :: Apache Software License
 Development Status :: 4 - Beta
 Intended Audience :: Developers
 Intented Audience :: System Administrators
 Intended Audience :: Information Technology
 Topic :: Utlities
 
[wheel]
universal = 1
